<resources>

    <string name="app_name">Wallpapyrus pro</string>
    <string name="wallpaper_description">Set wallpapers easily.</string>
    <string name="select_wallpaper">Select a wallpaper</string>
    <string name="ads">Advertisement</string>
    <string name="settings">Settings</string>
    <string name="scroll_wallpaper">Scroll Wallpaper</string>
    <string name="select_wallpaper_">Select wallpaper!</string>
    <string name="set_wallpapyrus_as_live_wallpaper_">Set \'Wallpapyrus pro\' as live wallpaper.</string>
    <string name="show_clock">Show clock</string>
    <string name="clock_settings">Clock settings</string>
    <string name="horizontal_location_as_percent_of_screen_width">Horizontal location</string>
    <string name="vertical_location_as_percent_of_screen_height">Vertical location</string>
    <string name="as_percent_of_screen_width">As percentage of screen width 0-100</string>
    <string name="as_percent_of_screen_height">As percentage of screen height 0-100</string>
    <string name="zero_to_hundred">0-100</string>
    <string name="select_clock">Select clock</string>
    <string name="no_clock">No clock</string>
    <string name="default_clock">Default clock</string>
    <string name="wallpapyrus_load_error">Wallpapyrus load error!</string>
    <string name="scale">Scale</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="wallpaper_type">Wallpaper type</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="widget_name1x1">Wallpapyrus pro</string>
    <string name="done">Done</string>
    <string name="error_setting_wallpaper">Error setting image as Wallpapyrus!
        \n
        \nChoose images stored in your phone.</string>
    <string name="open_image_selector">Open image selector</string>
    <string name="feature_dependent_on_launcher">This feature is dependent on Launcher app.</string>
</resources>